Info endpoint fully implemented + cleanup
All info endpoints are correctly implemented now.  Also cleaned up the
SQL Schema for the Info database and some general code cleanup.
